Copilot Refactoring - extract business types in a separated project. Prompt - move the business classes in a new project AiStil.App.

--- a/AiStil.Tests/AiStil.Tests.csproj
+++ b/AiStil.Tests/AiStil.Tests.csproj
@@ -19,4 +19,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AiStil.App\AiStil.App.csproj" />
+  </ItemGroup>
+
 </Project>
